--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,44 +2,56 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="#F7F7F7"
-
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#F7F7F7"
+    android:orientation="vertical">
 
-    <com.google.android.material.internal.FlowLayout
-        android:id="@+id/fl_select_tag"
-        app:lineSpacing="10dp"
-        app:itemSpacing="10dp"
-        android:background="#FFFFFF"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp"
-        android:layout_marginTop="10dp"
-        android:paddingTop="15dp"
-        android:paddingBottom="15dp"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"/>
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="所有标签"
-        android:layout_marginTop="25dp"
-        android:layout_marginLeft="15dp"
-        android:textColor="#ff666666"
-        android:textSize="14sp"
-        />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
 
-    <com.google.android.material.internal.FlowLayout
-        android:id="@+id/fl_all_tag"
-        app:lineSpacing="10dp"
-        app:itemSpacing="10dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginTop="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"/>
+            android:orientation="vertical">
+
+            <!--    android:maxHeight="200dp"-->
+            <com.google.android.material.internal.FlowLayout
+                android:id="@+id/fl_select_tag"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:background="#FFFFFF"
+                android:orientation="horizontal"
+                android:paddingLeft="15dp"
+                android:paddingTop="15dp"
+                android:paddingRight="15dp"
+                android:paddingBottom="15dp"
+                app:itemSpacing="10dp"
+                app:lineSpacing="10dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="25dp"
+                android:text="所有标签"
+                android:textColor="#ff666666"
+                android:textSize="14sp" />
+
+            <com.google.android.material.internal.FlowLayout
+                android:id="@+id/fl_all_tag"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="20dp"
+                android:layout_marginRight="15dp"
+                android:orientation="horizontal"
+                app:itemSpacing="10dp"
+                app:lineSpacing="10dp" />
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
